--- a/src/components/station-card/station-card.scss
+++ b/src/components/station-card/station-card.scss
@@ -12,34 +12,18 @@ station-card {
         left: 0;
         right: 0;
     }
+
+    .grid {
+        height: 100%;
+    }
+
+    .border-right {
+        border-right: solid 1px rgba(0, 0, 0, 0.12);
+    }
 }
 
 .station-card--header {
     background-color: $white;
-    padding: 8px 16px;
-    position: relative;
-    height: 58px;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-
-    .station-cb {
-        display: inline-block;
-        height: 16px;
-        margin: -8px 8px;
-        vertical-align: middle;
-
-        img {
-            max-height: 100%;
-            margin: auto;
-        }
-    }
-
-
-
-    .station-infos {
-        flex: 1;
-    }
 
     .station-name,
     .station-distance {
@@ -49,9 +33,9 @@ station-card {
     }
 
     .station-name {
-        max-width: 80%;
+        padding: 0 8px;
         color: $black-87;
-        font-size: 18px;
+        font-size: 1.8rem;
         white-space: nowrap;
         overflow: hidden;
         text-overflow: ellipsis;
@@ -59,37 +43,27 @@ station-card {
 
     .station-distance {
         color: color($colors, secondary, base);
-        font-size: 16px;
+        font-size: 1.6rem;
     }
 }
 
-.station-card--content {
-    position: relative;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    align-items: center;
-    min-height: 100%;
-    padding: 0;
+.station-card--content,
+.station-card--dead {
+    flex-grow: 1;
+}
 
-    .station-dead {
-        font-weight: 300;
-        text-align: center;
-        padding: 16px;
-        white-space: normal;
-    }
-
-    .border-right {
-        border-right: solid 1px rgba(0, 0, 0, 0.12);
-    }
+.station-card--dead {
+    color: $black-54;
+    font-size: 1.4rem;
+    text-align: center;
+    white-space: normal;
 }
 
 .station-card--footer {
-    .station-lastup {
-        color: $black-54;
-        margin: 0;
-        font-size: 11px;
-        line-height: 1;
-        text-align: center;
-    }
+    color: $black-54;
+    background: $white;
+    font-size: 0.8rem;
+    line-height: 1;
+    text-align: center;
+    padding: 8px;
 }
