Finally fix the fab icon

--- a/src/components/favorites-button/favorites-button.scss
+++ b/src/components/favorites-button/favorites-button.scss
@@ -25,6 +25,11 @@ favorites-button {
             transform: scale(50);
         }
 
+        // TEMPORARY FIX
+        & > .fab .button-inner .img-responsive {
+            margin-right: -5px;
+        }
+
         // Add label support on ion-fab
         .fab {
             contain: initial;
@@ -33,11 +38,7 @@ favorites-button {
                 color: $mustard;
                 background-color: $light;
             }
-
-            // TEMPORARY FIX
-            .button-inner .img-responsive {
-                margin-right: -5px;
-            }        }
+        }
 
         button {
             box-shadow: 0 4px 10px #6b6b6b;
