Implements error toast

--- a/src/services/toast/toast-component.scss
+++ b/src/services/toast/toast-component.scss
@@ -26,4 +26,8 @@ toast-component {
         opacity: 0;
         transition: opacity 500ms;
     }
+
+    &.error {
+        background: $mustard;
+    }
 }
