Improves sidemenu design (fix back on ios)

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,5 +1,5 @@
 <ion-menu side="right" type="push" [content]="content">
-    <ion-content>
+    <ion-content class="sidemenu-container">
         <sidemenu></sidemenu>
     </ion-content>
 </ion-menu>
