--- a/src/components/cb-icon/cb-icon.html
+++ b/src/components/cb-icon/cb-icon.html
@@ -1,2 +1,2 @@
-<img *ngIf="active" class="img-responsive" src="assets/img/vliller-cb.svg">
-<img *ngIf="!active" class="img-responsive" src="assets/img/vliller-no-cb.svg">
+<img *ngIf="active" class="img-responsive" src="assets/img/vliller-icon-cb.svg">
+<img *ngIf="!active" class="img-responsive" src="assets/img/vliller-icon-no-cb.svg">
