--- a/src/components/favorites-add-icon/favorites-add-icon.scss
+++ b/src/components/favorites-add-icon/favorites-add-icon.scss
@@ -1,7 +1,9 @@
 favorites-add-icon {
     display: block;
 
-    .button[icon-only] {
+    .button {
         margin: 0;
+        padding-left: 1rem;
+        padding-right: 0.8rem;
     }
 }
