Reorganize station card header

--- a/src/components/favorites-add-icon/favorites-add-icon.scss
+++ b/src/components/favorites-add-icon/favorites-add-icon.scss
@@ -3,7 +3,6 @@ favorites-add-icon {
 
     .button {
         margin: 0;
-        padding-left: 1rem;
-        padding-right: 0.8rem;
+        padding: 0 1rem;
     }
 }
