--- a/src/components/station-card/station-card.scss
+++ b/src/components/station-card/station-card.scss
@@ -27,24 +27,26 @@ station-card {
 
     .station-name,
     .station-distance {
-        display: inline-block;
+        display: block;
         vertical-align: bottom;
         line-height: 1.3;
     }
 
     .station-name {
-        padding: 0 8px;
         color: $black-87;
-        font-size: 1.8rem;
+        font-size: 1.6rem;
         white-space: nowrap;
         overflow: hidden;
         text-overflow: ellipsis;
-        max-width: 75%;
     }
 
     .station-distance {
         color: color($colors, secondary, base);
-        font-size: 1.6rem;
+        font-size: 1.2rem;
+    }
+
+    .station-cb {
+        margin: 0 0.8rem;
     }
 }
 
