--- a/src/components/direction-button/direction-button.html
+++ b/src/components/direction-button/direction-button.html
@@ -1,1 +1,1 @@
-<button ion-button clear (click)="startNavigation()">ALLER<img class="img-responsive" src="assets/img/vliller-icon-direction.svg"></button>
+<button ion-button clear (click)="navigate()">ALLER<img class="img-responsive" src="assets/img/vliller-icon-direction.svg"></button>
