Adds destination name to navigation

--- a/src/components/station-card/station-card.html
+++ b/src/components/station-card/station-card.html
@@ -26,7 +26,7 @@
 
         <!-- Maps button -->
         <ion-col col-auto>
-            <direction-button [coordinates]="station"></direction-button>
+            <direction-button [station]="station"></direction-button>
         </ion-col>
     </ion-row>
 
