--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,33 +1,41 @@
 $station-card-height: 154px;
 $favorites-button-margin: $fab-content-margin;
 
-.home-button-menu-toggle {
-    min-width: 32px !important;
-}
-
-.home-content {
-    position: relative;
-    height: 100%;
-
-    map {
-        position: absolute;
-        top: 0;
-        left: 0;
-        right: 0;
-        bottom: $station-card-height;
-
-        favorites-button {
-            position: absolute;
-            right: $favorites-button-margin;
-            bottom: $favorites-button-margin;
+page-home {
+    .header {
+        .bar-button {
+            opacity: 0.8;
         }
     }
 
-    station-card {
-        position: absolute;
-        left: 0;
-        right: 0;
-        bottom: 0;
-        height: $station-card-height;
+    .home-button-menu-toggle {
+        min-width: 32px !important;
+    }
+
+    .home-content {
+        position: relative;
+        height: 100%;
+
+        map {
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: $station-card-height;
+
+            favorites-button {
+                position: absolute;
+                right: $favorites-button-margin;
+                bottom: $favorites-button-margin;
+            }
+        }
+
+        station-card {
+            position: absolute;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            height: $station-card-height;
+        }
     }
 }
