refactor(formatedDistance): moves the formatedDistance() method as an accessoir of VlillerStation model

--- a/src/components/station-card/station-card.html
+++ b/src/components/station-card/station-card.html
@@ -16,7 +16,7 @@
         <!-- Station name & distance -->
         <ion-col>
             <div class="station-name">{{ station.name }}</div>
-            <div class="station-distance">{{ formatedDistance() }}</div>
+            <div *ngIf="isLoaded" class="station-distance">à {{ station.formatedDistance }}</div>
         </ion-col>
 
         <!-- CB -->
