--- a/src/components/favorites-button/favorites-button.html
+++ b/src/components/favorites-button/favorites-button.html
@@ -3,7 +3,7 @@
         <img class="img-responsive" src="assets/img/vliller-icon-fav-white.svg">
     </button>
     <ion-fab-list side="top">
-        <button ion-fab color="mustard" *ngFor="let station of (favoriteStations | async)" (click)="favoriteClick(station)">
+        <button ion-fab color="mustard" *ngFor="let station of favoriteStations" (click)="favoriteClick(station)" class="fab-md-mustard" [ngClass]="{'show': isOpened}">
             <img class="img-responsive" src="assets/img/vliller-icon-bike-white.svg">
             <div class="label">{{ station.name }}</div>
         </button>
