--- a/src/components/favorites-add-icon/favorites-add-icon.html
+++ b/src/components/favorites-add-icon/favorites-add-icon.html
@@ -1,4 +1,4 @@
 <button ion-button clear (click)="toggleFavorite()">
-    <img *ngIf="isFavoriteStation" class="img-responsive" src="assets/img/vliller-icon-fav-added.svg">
-    <img *ngIf="!isFavoriteStation" class="img-responsive" src="assets/img/vliller-icon-fav-add.svg">
+    <img *ngIf="station.isFavorite" class="img-responsive" src="assets/img/vliller-icon-fav-added.svg">
+    <img *ngIf="!station.isFavorite" class="img-responsive" src="assets/img/vliller-icon-fav-add.svg">
 </button>
