feat(loading): improves station card loading design

--- a/src/components/station-card-metric/station-card-metric.html
+++ b/src/components/station-card-metric/station-card-metric.html
@@ -1,7 +1,17 @@
-<div class="metric-value">
+<!-- loading -->
+<div *ngIf="isLoading" class="metric-value">
+    <div class="metric-value-loader"><ion-spinner color="secondary"></ion-spinner></div>
+
+    <div><img class="metric-value-icon" [src]="computeIconUrl(type, 'grey')"></div>
+</div>
+
+<!-- loaded -->
+<div *ngIf="!isLoading" class="metric-value">
     <div class="metric-value-text text-{{ color }}">{{ value }}</div>
 
     <div><img class="metric-value-icon" [src]="iconUrl"></div>
 </div>
 
-<p class="metric-text">{{ text }}</p>
+<p *ngIf="!isLoading" class="metric-text">{{ text }}</p>
+
+
