--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -38,6 +38,10 @@ body {
     svg {
         width: 50px;
         height: 50px;
+
+        circle {
+            stroke-width: 5px;
+        }
     }
 
     p {
