--- a/src/components/station-card-metric/station-card-metric.scss
+++ b/src/components/station-card-metric/station-card-metric.scss
@@ -28,6 +28,17 @@ station-card-metric {
             opacity: 0.99;
         }
 
+        .metric-value-loader {
+            margin-left: -25px;
+            margin-right: -25px;
+
+            ion-spinner,
+            svg {
+                width: 40px;
+                height: 40px;
+            }
+        }
+
         .metric-value-icon {
             display: block;
             max-width: 100%;
