--- a/src/components/station-card/station-card.html
+++ b/src/components/station-card/station-card.html
@@ -34,13 +34,14 @@
     <ion-row class="station-card--content" *ngIf="station.status === '0'" align-items-center>
         <ion-col>
             <!-- bikes -->
-            <station-card-metric type="bike" [value]="station.bikes" class="border-right"></station-card-metric>
+            <station-card-metric type="bike" [value]="station.bikes" [isLoading]="isLoading" class="border-right"></station-card-metric>
         </ion-col>
         <ion-col>
             <!-- docks -->
-            <station-card-metric type="dock" [value]="station.docks"></station-card-metric>
+            <station-card-metric type="dock" [value]="station.docks" [isLoading]="isLoading"></station-card-metric>
         </ion-col>
     </ion-row>
+
     <ion-row class="station-card--dead" *ngIf="station.status !== '0'" align-items-center justify-content-center>
         <div padding>Cette station semble indisponible.<br>Tente ta chance, ou va plus loin&nbsp;!</div>
     </ion-row>
