--- a/src/components/station-card-metric/station-card-metric.scss
+++ b/src/components/station-card-metric/station-card-metric.scss
@@ -30,7 +30,8 @@ station-card-metric {
 
         .metric-value-loader {
             margin-left: -25px;
-            margin-right: -25px;
+            margin-right: -30px;
+            margin-bottom: -4px;
 
             ion-spinner,
             svg {
