--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -14,6 +14,7 @@ $white: #f5f5f5;
 $black-54: rgba(0, 0, 0, 0.54);
 $black-87: rgba(0, 0, 0, 0.87);
 $light: #fff;
+$light-grey: #9B9B9B;
 
 
 // Shared Variables
@@ -42,6 +43,7 @@ $colors: (
     light:      $light,
     dark:       $black-87,
     grey:       $black-54,
+    light-grey: $light-grey,
     lipstick:   $lipstick,
     cranberry:  $cranberry,
     azure:      $azure,
