--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,4 +1,4 @@
-<ion-menu side="right" type="push" [content]="content">
+<ion-menu side="right" type="push" [content]="content" (ionOpen)="setMapClickable(false)" (ionClose)="setMapClickable(true)">
     <ion-content class="sidemenu-container">
         <sidemenu></sidemenu>
     </ion-content>
