Fix menu button margin

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -6,6 +6,10 @@ page-home {
         .bar-button {
             opacity: 0.8;
         }
+
+        .bar-button-menutoggle-md {
+            margin: 0 0.2rem;
+        }
     }
 
     .home-content {
