--- a/src/components/pie-chart/pie-chart.html
+++ b/src/components/pie-chart/pie-chart.html
@@ -1,3 +1,5 @@
-<svg width="100" height="100">
-  <circle r="25" cx="50" cy="50" />
-</svg>
+<div class="pie-chart-container">
+  <svg viewBox="0 0 34 34">
+    <circle r="16" cx="17" cy="17" [style.strokeDasharray]="strokeDasharray" />
+  </svg>
+</div>
