--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -11,6 +11,7 @@ $greenblue: #33d699;
 $topaz: #19d1bf;
 $aetm-blue: #259cc2;
 $white: #f5f5f5;
+$black-12: rgba(0, 0, 0, 0.12);
 $black-54: rgba(0, 0, 0, 0.54);
 $black-87: rgba(0, 0, 0, 0.87);
 $light: #fff;
