Fix list left padding behavior

--- a/src/pages/favorites/favorites.scss
+++ b/src/pages/favorites/favorites.scss
@@ -1,7 +1,7 @@
 page-favorites {
   ion-list {
     ion-avatar {
-      // padding-left: 15px;
+      padding-left: 16px;
 
       pie-chart .pie-chart-container  {
         height: 35px;
