--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -2,16 +2,16 @@ $station-card-height: 154px;
 $favorites-button-margin: $fab-content-margin;
 
 page-home {
-    .halloween-header {
-        position: absolute;
-        top: 18px;
-        left: 50%;
-        transform: translateX(-50%);
-        background-size: cover;
-        background: url('../assets/img/halloween/vliller-background-header.png');
-        height: 96px;
-        width: 1241px;
-    }
+    // .halloween-header {
+    //     position: absolute;
+    //     top: 18px;
+    //     left: 50%;
+    //     transform: translateX(-50%);
+    //     background-size: cover;
+    //     background: url('../assets/img/halloween/vliller-background-header.png');
+    //     height: 96px;
+    //     width: 1241px;
+    // }
 
     .header {
         .bar-button {
