--- a/src/components/favorites-button/favorites-button.html
+++ b/src/components/favorites-button/favorites-button.html
@@ -1,13 +1,14 @@
 <ion-fab #fab [ngClass]="{'favorites-list-active': isOpened}">
-    <button ion-fab color="mustard" (click)="toggleIsOpened()">
+    <!--<button ion-fab color="mustard" (click)="toggleIsOpened()"> -->
+    <button ion-fab color="mustard" (click)="openFavorites()">
         <img class="img-responsive" src="assets/img/vliller-icon-fav-white.svg">
     </button>
-    <ion-fab-list side="top">
+    <!--<ion-fab-list side="top">
         <button ion-fab *ngFor="let station of favoriteStations" (click)="favoriteClick(station)" [ngClass]="{
             'show': isOpened
         }">
             <pie-chart [value]="station.fulfillmentInPercent"></pie-chart>
             <div class="label">{{ station.name }}</div>
         </button>
-    </ion-fab-list>
+    </ion-fab-list>-->
 </ion-fab>
