--- a/src/pages/favorites/favorites.scss
+++ b/src/pages/favorites/favorites.scss
@@ -1,25 +1,9 @@
+pie-chart {
+  margin: 0 8px 0 16px;
 
-// ion-title {
-//   text-align: center;
-// }
-
-.station {
-  position: absolute;
-  top: 35%;
-  left: -40%;
-}
-
-.custom-btn {
-  width: 100px;
-}
-
-pie-chart .pie-chart-container {
-
-  circle {
-    fill: $mustard;
+  .pie-chart-container {
+    circle {
+      fill: $mustard;
+    }
   }
-}
-
-#icon-delete {
-  font-size: 90px !important;
 }
